--- a/liquidwar6/doc/tuning-selfdoc.texi
+++ b/liquidwar6/doc/tuning-selfdoc.texi
@@ -579,7 +579,13 @@ upgrade the game.
 @subsection server
 @deffn {Command-line option} @code{--server}
 @deffnx {Environment variable} @code{LW6_SERVER}
-Start the game in server mode, without requiring any graphics backend.
+Start the game in server mode, without requiring any graphics backend. Server
+mode is usefull if you just want to start a network node without hosting any
+real game on it. It can be used to list existing nodes and sessions or as a
+bounce server in case some clients can't contact each other because
+firewalled. If you only want to start a server game on your computer, don't
+use this option, just start the game normally and start a game server by
+clicking on the GUI buttons.
 @end deffn
 
 @subsection target-fps
