--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-22 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Started to implement OOB messages.
+
 2010-07-21 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added password option.
