--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -1848,7 +1848,7 @@ The @code{snd} module handles sound. It's also an abstract class, an interface,
 which uses dynamic backends as implementations.
 
 The @code{net} module is a wrapper over different network APIs, it
-handles Winsock and POSIX sockets in a uniform manner.
+handles Winsock and POSIX sockets in a uniform manner. 
 The @code{cli} and @code{srv} contain network client and server code,
 implementing the various protocols in dynamically loadable sub-modules.
 It's the role of @code{p2p} to glue this together, handle the list
@@ -1864,9 +1864,10 @@ The @code{hlp} is used to handle keywords and internal self-documentation
 knows how to read and save config files,  @code{cns} handles the console,
 and @code{dyn} can load @code{.so} shared files dynamically.
 
-Finally the @code{img} module is just here to make screenshots of the game,
-it's been separated for this feature required to link against a dedicated
-library.
+Finally there are small modules like @code{img} (to make screenshots of the game)
+or @code{nod} (utilities to store node state)  which 
+have been separated because they required special libraries to link with
+and/or did not really fit in existing modules for dependencies reasons.
 
 So well, this is a lot of modules. The list might move a bit, but the
 big picture is here. Each module is testable separately.
