--- a/liquidwar6/doc/network-selfdoc.texi
+++ b/liquidwar6/doc/network-selfdoc.texi
@@ -40,6 +40,19 @@ only if you specifically want to disactivate some protocol, or if you want to
 activate a custom-made client backend. It's a comma separated list.
 @end deffn
 
+@subsection node-title
+@deffn {Command-line option} @code{--node-title=<value>}
+@deffnx {Environment variable} @code{LW6_NODE_TITLE}
+@deffnx {XML key} @code{node-title}
+Type: string
+
+Default value: 
+
+The title of your node, that is the name which will be displayed when listing
+servers. This is different from player name, for there can be several players
+on a single computer. By default this will be set to hostname.
+@end deffn
+
 @subsection password
 @deffn {Command-line option} @code{--password=<value>}
 @deffnx {Environment variable} @code{LW6_PASSWORD}
