--- a/liquidwar6/doc/show-selfdoc.texi
+++ b/liquidwar6/doc/show-selfdoc.texi
@@ -80,6 +80,13 @@ Shows wether the game was build with suitable informations for gprof. This
 depends on parameters passed to './configure'.
 @end deffn
 
+@subsection show-build-enable-gtk
+@deffn {Command-line option} @code{--show-build-enable-gtk}
+Shows wether GTK+ support has been enabled when building the game. This
+depends on parameters passed to './configure' and also on the presence of GTK+
+headers and libs. It uses pkg-config to detect it.
+@end deffn
+
 @subsection show-build-enable-instrument
 @deffn {Command-line option} @code{--show-build-enable-instrument}
 Shows wether the game was build with the '-finstrument-functions' GCC switch.
