--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-26 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed internal fifo bug.
+
 2010-07-25 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Test suite for nod module.
