--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-07-27 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added tools for safe node dyn info access.
+
 	* Fixed make distcheck target (using const.texi.in.in).
 
 2010-07-26 : Christian Mauduit <ufoot@ufoot.org>
