--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-04 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Removed version in AM_INIT_AUTOMAKE call.
+
 2010-08-03 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed bug in script (server -> node).
