--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -3510,6 +3510,20 @@ linefeed, or any of such characters left.
 @strong{Return value:}  none. 
 @end deftypefun
 
+@deftypefun {void} {lw6sys_str_cleanup_ascii7} (char * @var{str})
+@var{str}:  a pointer to the string, which will be modified in-place.
+
+Used to clean up some strings, for instance if they
+come from the network, we don't necessarly want system
+chars to be displayed on the console. Basically it removes
+all characters with an ASCII code inferior to 32, that is,
+all system characters. This way, there won't be any tab,
+linefeed, or any of such characters left. This function
+will even remove any character above ASCII 127.
+
+@strong{Return value:}  none. 
+@end deftypefun
+
 @deftypefun {char *} {lw6sys_str_reformat} (char * @var{str}, char * @var{prefix}, int @var{nb_columns})
 @var{str}:  a pointer to the string we want to modify
 
@@ -3783,6 +3797,38 @@ http:// and a trailing /, and treats port 80 as default. This
 is used to create public_url in net modules.
 
 @strong{Return value:}  a newly allocated string, NULL on error.
+@end deftypefun
+
+@deftypefun {lw6sys_url_t *} {lw6sys_url_parse} (char * @var{url})
+@var{url}:  the URL to parse
+
+Parses a URL, this is not a complete RFC compliant
+parser, it's only used to transform URLs into
+their 'canonical' form as well as getting basic
+info such as on which port one should connect.
+
+@strong{Return value:}  a newly allocated struct, NULL on error
+@end deftypefun
+
+@deftypefun {void} {lw6sys_url_free} (lw6sys_url_t * @var{url})
+@var{url}:  the url struct to free
+
+Frees a URL struct and all its members.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {char *} {lw6sys_url_canonize} (char * @var{url})
+@var{url}:  the url to check & transform
+
+Checks if a given URL is correct and, if it is,
+transforms it into its canonical form. This is
+mostly to get rid of typesettings error, add a
+tailing /, transform all domain into lowercase,
+among other things. A canonized url passed into
+this function should come out exactly the same.
+
+@strong{Return value:}  a newly allocated string.
 @end deftypefun
 
 @deftypefun {int} {lw6sys_vthread_run} (lw6sys_thread_callback_func_t @var{callback_func}, lw6sys_thread_callback_func_t @var{callback_join}, void * @var{callback_data})
