Basic httpd server works, serves static pages.

--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -2956,9 +2956,11 @@ HTTP public URLs:
 
 @verbatim
 / -> index.html
+/index.html
 /favicon.ico
-/screenshot.jpg
+/screenshot.jpeg
 /robots.txt
+/gpl.txt
 /info.txt
 /list.txt
 /ping.txt
