--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-05 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Basic httpd server works, serves static pages.
+
 2010-08-04 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added resources for mod-httpd.
