--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-06 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Refresh of web pages uses both http header and javascript.
+
 2010-08-05 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added logging facility to web server.
