--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-08 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Returns 500 error on idle client connections (httpd traps all).
+
 2010-08-06 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Refresh of web pages uses both http header and javascript.
